# bo

./: .gitignore  .hgeol  .hgignore  CMakeLists.txt  FindBo.cmake  LICENSE  LICENSE.txt  README.md  README.txt  TODO.txt  bitbucket_cmds.txt  mercurial_add_commands.txt  slnCommon.sln
Bo/: CMakeLists.txt  config.hpp  pch.h
Bo/bo/: config.hpp  errors.hpp  extended_math.hpp  extended_std.hpp  image_operations.hpp  kdtree.hpp  logging.hpp  mesh.hpp  mrf.hpp  mrf_2d.hpp  performance.hpp  raw_image_2d.hpp  topology.hpp  transformation_3d.hpp  triangle.hpp  vector.hpp
Bo/bo/blas/: blas.hpp  conversions.hpp  pca.hpp
Bo/bo/internal/: mrf_2d.hpp  mrf_clique_functions.hpp  mrf_optimization.hpp
Bo/bo/internal/mrf/: likelihood_functions.hpp  mrf_2d.hpp  mrf_clique_functions.hpp  mrf_node_types.hpp  mrf_optimization.hpp  mrf_type_values.hpp  node_types.hpp  optimization.hpp  prior_functions.hpp  type_values.hpp
Bo/bo/internal/surfaces/: arched_strip.hpp  christiansen_tiling.hpp  container_traversers.hpp  indexed_tstrip.hpp  types.hpp
Bo/bo/io/: ini_reader.hpp  mesh_io.hpp  raw_image_2d_io.hpp
Bo/bo/io/config_parser/: basic_configuration.hpp  uon_basic_configuration.hpp
Bo/bo/methods/: 3d_distances.hpp  complex_propagation.hpp  convex_hull_3d.hpp  d25_active_contours.hpp  distances_3d.hpp  dpg_hough_transform_2d.hpp  hough_transform.hpp  icp_3d.hpp  linear_filtering_2d.hpp  mbutterfly_mesh_subdiv.hpp  mesh_closest_face_sr.hpp  parallel_planes_tiling.hpp  triangulation.hpp
Bo/common/: mesh.hpp  triangle.hpp
Bo/common/blas/: blas.hpp
Bo/common/io/: ini_reader.hpp
Bo/common/io/config_parser/: uon_basic_configuration.hpp
Bo/common/methods/: d25_active_contours.hpp
Bo/core/: image_operations.hpp  linear_filtering_2d.hpp  mesh.hpp  raw_image_2d.hpp  triangle.hpp  vector.hpp
Bo/distances/: distances_3d.hpp  mesh_closest_face_sr.hpp
Bo/io/: mesh_io.hpp  raw_image_2d_io.hpp
Bo/io/config_parser/: uon_basic_configuration.hpp
Bo/math/: blas_conversions.hpp  blas_extensions.hpp  extended_math.hpp  functions.hpp  mean.hpp  pca.hpp  topology.hpp  transformation_3d.hpp
Bo/mrf/: likelihood_functions.hpp  mrf.hpp  mrf_2d.hpp  node_types.hpp  optimization.hpp  prior_functions.hpp  type_values.hpp
Bo/recognition/: dpg_hough_transform_2d.hpp  hough_transform.hpp
Bo/registration/: icp_3d.hpp
Bo/src/: mesh.cpp
Bo/src/io/: ini_reader.cpp  mesh_io.cpp  raw_image_2d_io.cpp
Bo/src/methods/: d25_active_contours.cpp  mbutterfly_mesh_subdiv.cpp
Bo/surfaces/: christiansen_tiling.hpp  complex_propagation.hpp  complex_propagator.hpp  convex_hull_3d.hpp  d25_active_contours.hpp  mbutterfly_mesh_subdiv.hpp  triangulation.hpp
Bo/surfaces/detail/: arched_strip.hpp  centrifugal_propagation.hpp  container_traversers.hpp  indexed_tstrip.hpp  inertial_propagation.hpp  propagation_result.hpp  tangential_propagation.hpp  total_propagation.hpp  types.hpp
Bo/utils/: logging.hpp  performance.hpp  std_extensions.hpp
BoTest/: CMakeLists.txt
BoTest/src/: ini_reader_unittest.cpp  main.cpp  mesh_unittest.cpp  raw_image_2d_unittest.cpp  timer_unittest.cpp  vector_unittest.cpp
appCommonTest/: CMakeLists.txt
appCommonTest/src/: ini_reader_unittest.cpp  main.cpp  mesh_unittest.cpp  raw_image_2d_unittest.cpp  timer_unittest.cpp  vector_unittest.cpp
examples/: CMakeLists.txt
examples/data/mesh/: mesh01.ply  mesh02.ply
examples/data/tiling/: 2d_contour4_512x512_8bit.ply  2d_contour4_512x512_8bit_transformed.ply  sheep_plane.ply
examples/data/tiling/femur/: femur.ply  femur_plane01.ply  femur_plane02.ply  femur_plane03.ply  femur_plane04.ply  femur_plane05.ply  femur_plane06.ply  femur_plane07.ply  femur_plane08.ply  femur_plane09.ply  femur_plane10.ply  femur_plane11.ply  femur_plane12.ply  femur_plane13.ply  femur_plane14.ply  femur_plane15.ply
examples/data/tiling/sheep/: 000.ply  0001.ply  0002.ply  0003.ply  0004.ply  0005.ply  0006.ply  0007.ply  0008.ply  0009.ply  (+92 more)
examples/mesh_example/: CMakeLists.txt  mesh_example.cpp
examples/tiling_example/: CMakeLists.txt  tiling_example.cpp
libCommon/: CMakeLists.txt  libCommon.vcproj
libCommon/Debug/: libCommon.pch
libCommon/common/: errors.hpp  extended_math.hpp  image_operations.hpp  mesh.hpp  pch.h  performance.hpp  raw_image.hpp  raw_image_2d.hpp  triangle.hpp  vector.hpp
libCommon/common/blas/: blas.hpp
libCommon/common/io/: ini_reader.hpp  mesh_io.hpp  raw_image_2d_io.hpp
libCommon/common/io/config_parser/: basic_configuration.hpp  uon_basic_configuration.hpp
libCommon/common/methods/: 3d_distances.hpp  d25_active_contours.hpp  linear_filtering_2d.hpp  mbutterfly_mesh_subdiv.hpp
libCommon/include/: errors.hpp  mesh.hpp  pch.h  performance.hpp  point.hpp  raw_image.hpp  routines.hpp  stdafx.h  triangle.hpp
libCommon/include/blas/: blas.hpp
libCommon/include/common/: errors.hpp  mesh.hpp  performance.hpp  point.hpp  raw_image.hpp  triangle.hpp  vector.hpp
libCommon/include/io/: ini_reader.hpp  mesh_io.hpp
libCommon/include/io/config_parser/: basic_configuration.hpp  uon_basic_configuration.hpp
libCommon/include/methods/: 3d_distances.hpp  d25_active_contours.hpp
libCommon/rply-1.01/sample/: pts.ply
libCommon/src/: d25_active_contours.cpp  ini_reader.cpp  mesh.cpp  pch.cpp  point.cpp  stdafx.cpp
libCommon/src/io/: ini_reader.cpp  mesh_io.cpp  raw_image_2d_io.cpp
libCommon/src/methods/: d25_active_contours.cpp  mbutterfly_mesh_subdiv.cpp
src/: pch.cpp
src/io/: ini_reader.cpp  mesh_io.cpp
src/surfaces/: d25_active_contours.cpp  mbutterfly_mesh_subdiv.cpp
tests/: CMakeLists.txt  CMakeLists.txt~
tests/data/: 2d_contour4_512x512_8bit.ply  2d_contour4_512x512_8bit.raw  femur_plane.ply  ini_reader_test.ini  sheep_plane.ply
tests/include/: debug_alloc.hpp
tests/src/: convex_hull_3d_unittest.cpp  d25_active_contours_unittest.cpp  dpg_hough_transform_unittest.cpp  geometry_unittest.cpp  ini_reader_unittest.cpp  main.cpp  math_unittest.cpp  mesh_unittest.cpp  raw_image_2d_unittest.cpp  tiling_unittest.cpp  timer_unittest.cpp  topology_unittest.cpp  vector_unittest.cpp
tools/: FindBo.cmake
